syntax = "proto3";

package microservices.demo.customer_service;
option csharp_namespace = "Microservices.Demo.CustomerService";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";


service CustomerService {
  rpc V1QueryCustomers (V1QueryCustomersRequest) returns (stream V1QueryCustomersResponse){
    option (google.api.http) = {
      post: "/V1QueryCustomers"
      body: "*"
    };
  }
  rpc V1CreateCustomer (V1CreateCustomerRequest) returns (V1CreateCustomerResponse){
    option (google.api.http) = {
      post: "/V1CreateCustomer"
      body: "*"
    };
  }
}

message V1QueryCustomersRequest {
  repeated int64 customer_ids = 1;
  repeated int64 region_ids = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message V1CreateCustomerRequest {
  int64 region_id = 1;
  string full_name = 2;
}

message V1CreateCustomerResponse {
  oneof result {
    Success ok = 1;
    Error error = 2;
  }

  message Success {
    int64 customer_id = 1; 
  }

  message Error {
    string code = 1;
    string text = 2;
  }
}

message V1QueryCustomersResponse {
  Customer customer = 1;
  int64 total_count = 2;

  message Customer {
    int64 customer_id = 1;
    Region region = 2;
    string full_name = 3;
    google.protobuf.Timestamp created_at = 4;
  }

  message Region {
    int64 id = 1;
    string name = 2;
  }
}